# timeTrackerTool

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml  tests.yml
packaging/: entry.py  install.bat  install.ps1
scripts/: build_app.py  install_windows.py  make_assets.py  make_icon.py
src/timetracker/: __init__.py  app.py  autostart.py  banner.py  core.py  cube.py  db.py  icons.py  idle.py  merge_cli.py  report.py  sprites.py  sync.py
tests/: test_app.py  test_autostart.py  test_autostart_win.py  test_banner.py  test_build_bundle.py  test_core.py  test_db.py  test_idle.py  test_install_windows.py  test_report.py  test_sync.py
